--- a/velaio/src/app/compoments/todo/todo.component.html
+++ b/velaio/src/app/compoments/todo/todo.component.html
@@ -3,8 +3,8 @@
         TODO
     </h1>
     <div class="new-todo">
-        <input type="text" placeholder="Escribe una nueva tarea">
-        <button>+</button>
+        <input type="text" (keydown.enter)="addTodo()" placeholder="Escribe una nueva tarea" [formControl]="newTodo">
+        <button (click)="addTodo()">+</button>
     </div>
     <div class="filters">
         <button (click)="changeFilter('all')" [class.active]="Filter() === 'all'">todos</button>
@@ -13,15 +13,22 @@
     </div>
 
     <ul class="todolist">
-        <li class="todo">
-            <input type="checkbox">
-            <label>titulo tarea</label>
-            <button>Editar</button>
-            <button>Eliminar</button>
-        </li>
-        <li class="todo-editing">
-            <input type="text" placeholder="editar tarea">
-            
-        </li>
+        @for (todo of todoListFiltered(); track todo.id){
+            @if (todo.editing){
+                <li class="todo-editing">
+                    <input type="text" placeholder="editar tarea" (keydown.enter)="saveTitleTodo(todo.id, $event)" [value]="todo.title">  
+                </li>
+            }
+            @else{
+                <li class="todo">
+                    <input type="checkbox" [checked]="todo.completed" (click)="toggleTodo(todo.id)">
+                    <label>
+                        {{todo.title}}
+                    </label>
+                  @if (!todo.completed){ <button class="text-green-600" (click)="updateTodoEditingModel(todo.id)">Editar</button>}
+                    <button class="text-red-700" (click)="removeTodo(todo.id)">Eliminar</button>
+                </li>  
+            }
+        }
     </ul>
 </section>
