--- a/velaio/src/app/compoments/todo/todo.component.html
+++ b/velaio/src/app/compoments/todo/todo.component.html
@@ -1,34 +1,56 @@
 <section class="todolist-wrapper">
-    <h1 class="title">
-        TODO
-    </h1>
+    <h1 class="title">TODO</h1>
     <div class="new-todo">
-        <input type="text" (keydown.enter)="addTodo()" placeholder="Escribe una nueva tarea" [formControl]="newTodo">
-        <button (click)="addTodo()">+</button>
+      <input type="text" (keydown.enter)="addTodo()" placeholder="Escribe una nueva tarea" [formControl]="newTodo">
+      <button (click)="addTodo()">+</button>
     </div>
     <div class="filters">
-        <button (click)="changeFilter('all')" [class.active]="Filter() === 'all'">todos</button>
-        <button (click)="changeFilter('active')" [class.active]="Filter() === 'active'">activos</button>
-        <button (click)="changeFilter('completed')" [class.active]="Filter() === 'completed'">completados</button>
+      <button (click)="changeFilter('all')" [class.active]="Filter() === 'all'">Todos</button>
+      <button (click)="changeFilter('active')" [class.active]="Filter() === 'active'">Activos</button>
+      <button (click)="changeFilter('completed')" [class.active]="Filter() === 'completed'">Completados</button>
     </div>
-
+  
     <ul class="todolist">
-        @for (todo of todoListFiltered(); track todo.id){
-            @if (todo.editing){
-                <li class="todo-editing">
-                    <input type="text" placeholder="editar tarea" (keydown.enter)="saveTitleTodo(todo.id, $event)" [value]="todo.title">  
-                </li>
-            }
-            @else{
-                <li class="todo">
-                    <input type="checkbox" [checked]="todo.completed" (click)="toggleTodo(todo.id)">
-                    <label>
-                        {{todo.title}}
-                    </label>
-                  @if (!todo.completed){ <button class="text-green-600" (click)="updateTodoEditingModel(todo.id)">Editar</button>}
-                    <button class="text-red-700" (click)="removeTodo(todo.id)">Eliminar</button>
-                </li>  
-            }
-        }
+      <li *ngFor="let todo of todoListFiltered(); trackBy: trackById" class="todo">
+        <input type="checkbox" [checked]="todo.completed" (click)="toggleTodo(todo.id)">
+        <label>{{ todo.title }}</label>
+  
+        <button class="edit-btn" (click)="updateTodoEditingModel(todo.id)">Editar</button>
+        <button class="delete-btn" (click)="removeTodo(todo.id)">Eliminar</button>
+  
+        <!-- Sección para personas asociadas a la tarea -->
+        <div *ngIf="todo.people?.length">
+          <h3>Personas:</h3>
+          <ul>
+            <li *ngFor="let person of todo.people">
+              <div>
+                <strong>{{ person.fullName }}</strong> ({{ person.age }} años)
+                <button (click)="removePersonFromTask(todo.id, person.id)">Eliminar persona</button>
+              </div>
+              <div>
+                <h4>Habilidades:</h4>
+                <ul>
+                  <li *ngFor="let skill of person.skills">
+                    {{ skill }}
+                    <button (click)="removeSkillFromPerson(todo.id, person.id, skill)">Eliminar habilidad</button>
+                  </li>
+                </ul>
+                <input [(ngModel)]="newSkill.value" placeholder="Añadir habilidad">
+                <button (click)="addSkillToPerson(todo.id, person.id, newSkill.value)">Añadir habilidad</button>
+              </div>
+            </li>
+          </ul>
+        </div>
+  
+        <!-- Formulario para añadir nueva persona -->
+        <div>
+          <h3>Añadir Persona</h3>
+          <input [formControl]="newPersonName" placeholder="Nombre completo">
+          <input [formControl]="newPersonAge" type="number" placeholder="Edad">
+          <input [formControl]="newPersonSkill" placeholder="Habilidad inicial">
+          <button (click)="addPersonToTask(todo.id)">Añadir Persona</button>
+        </div>
+      </li>
     </ul>
-</section>
+  </section>
+  
